# intro-plotly

./: .gitignore  PLAN.md  README.md  index.qmd  main.py  pyproject.toml
.claude/: settings.local.json
datos/: ods_3_2_1_mortalidad_infantil.csv
docs/: PLAN.html  custom.css  index.html  presentacion.html
