[project]
name = "intro-plotly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.32.3",
]
